docs(research): record PR 2 completion and the SuperWord confound
Why: The Stage 1 microbenchmark's speedup number swung from 1.34x to
     12.3x after fixing a lambda-indirection bug, and a -XX:-UseSuperWord
     control confirmed why: C2 auto-vectorizes this exact loop shape and
     does so inconsistently across calling contexts. This needs recording
     precisely, not resolved by picking whichever number looks better.
What: Added SS18. Full PR 2 implementation/correctness record, plus the
      performance-validation finding: the measured scalar-vs-vector
      speedup is a range (roughly 1.3x-12x) driven by whether C2
      autovectorizes the scalar comparator in a given context, not a
      single number -- confirmed via a standalone -XX:-UseSuperWord
      control (22.4ns/op with SuperWord on vs 76.7ns/op off, same
      source). Explicitly does not plug either reading into SS15.1's
      gate-projection model, since neither is confirmed to represent
      what the real search's scalar path does. Recommends proceeding to
      PR 3 (native-Windows measurement) as the actual arbiter, not a
      confirmation of any specific number from this round.
Out of scope: PR 3 itself -- not run. Resolving which end of the range
      the real search lands on -- requires the native-Windows build,
      not further microbenchmarking.
Refs #218 Phase: 15 — nnue